{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 25,
  "lineage": "71b3b56e-7e65-ef8e-b21f-8acb80171a5d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_fraudes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fb0b8c1424f266b",
            "arn": "arn:aws:ec2:us-east-2:914156456046:instance/i-09a4b559aafce84bd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_fraudes_profile",
            "id": "i-09a4b559aafce84bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "plz-lab3",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03f67217268f9c913",
            "private_dns": "ip-172-31-4-196.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.4.196",
            "public_dns": "ec2-3-145-202-216.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.202.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-060ac1ab9c6e1434c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2-fraudes-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084e921e7e980a663",
            "tags": {
              "Environment": "Academico",
              "Name": "EC2-Fraudes-ML",
              "Projeto": "Deteccao Fraudes"
            },
            "tags_all": {
              "Environment": "Academico",
              "Name": "EC2-Fraudes-ML",
              "Projeto": "Deteccao Fraudes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029c538b2aa162dc7"
            ]
          },
          "dependencies": [
            "aws_db_instance.db_fraudes",
            "aws_iam_instance_profile.ec2_s3_profile",
            "aws_iam_role.ec2_s3_access_role",
            "aws_security_group.db_sg",
            "aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:914156456046:security-group/sg-080a79d20d60e8803",
            "description": "Permitir acesso PostgreSQL (Porta 5432)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080a79d20d60e8803",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-fraudes-sg",
            "name_prefix": "",
            "owner_id": "914156456046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Projeto": "Deteccao Fraudes"
            },
            "tags_all": {
              "Projeto": "Deteccao Fraudes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5933a7cbf7e5a20"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:914156456046:security-group/sg-029c538b2aa162dc7",
            "description": "Permitir SSH, HTTP e Streamlit",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029c538b2aa162dc7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Streamlit",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8501
              }
            ],
            "name": "ec2-fraudes-sg",
            "name_prefix": "",
            "owner_id": "914156456046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Projeto": "Deteccao Fraudes"
            },
            "tags_all": {
              "Projeto": "Deteccao Fraudes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5933a7cbf7e5a20"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}